--- a/tareas.html
+++ b/tareas.html
@@ -4,9 +4,14 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<link href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah' rel='stylesheet' type='text/css'>
 
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular-sanitize.min.js"></script>
+		<script src="http://tinymce.cachefly.net/4.1/tinymce.min.js"></script>
+		<!-- <script>tinymce.init({selector:'textarea'});</script> -->
+		<script src="./langs/es.js"></scriptsrc></script>
+
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular-sanitize.min.js"></script>
 		<script type="text/javascript" src="./js/html5-sortable.js"></script>
+		<script type="text/javascript" src="./js/ui-tinymce.js"></script>
 		<script type="text/javascript" src="./app.js"></script>
 		<link rel="stylesheet" href="http://cdn.jsdelivr.net/semantic-ui/0.19.0/css/semantic.min.css">
 		<link rel="stylesheet" href="./css/app.css">
@@ -19,7 +24,7 @@
 			<div class="contenido">
 				<div class="ui form">
 					<div class="field" ng-class="{'error':tareaDuplicada(tarea) && tarea.length}">
-						<textarea placeholder="Describe la nueva tarea" ng-model="tarea" ng-disabled="modo == 'borrar'"></textarea>
+						<textarea id="code" placeholder="Describe la nueva tarea" ui-tinymce ng-model="tarea" ng-disabled="modo == 'borrar'"></textarea>
 					</div>
 					<div class="ui green button" ng-click="nuevaTarea(tarea)"  ng-if="modo=='añadir';" ng-class="{'disabled':!tarea.length || tareaDuplicada(tarea)}">
 						<i class="save icon"></i>
@@ -73,7 +78,7 @@
 				</h2>
 				<div class="listaItems" ng-style="{ height: activasAltoLista }">
 					<div html-sortable="sortable_cross_option" ng-extra-sortable="'activas'" ng-model="tareasActivas">
-						<div  class="ui blue message" ng-class="{'completo': mostrarCompleto}" ng-repeat="item in tareasActivas track by $index" ng-click="mostrarCompleto = !mostrarCompleto" >
+						<div  class="ui blue message" ng-class="{'completo': mostrarCompleto}" ng-repeat="item in tareasActivas track by $index"  ng-click="mostrarCompleto = !mostrarCompleto" >
 							<div class="botonera">
 								<i class="close icon" ng-click="seleccionarTarea('borrar', 'activas', $index)"></i>
 							</div>
@@ -111,5 +116,6 @@
 			</div>
 		</div>
 	</div>
+
 </body>
 </html>
